--- a/addon/templates/components/drag-sort-list.hbs
+++ b/addon/templates/components/drag-sort-list.hbs
@@ -1,25 +1,35 @@
-{{#vertical-collection items
-    estimateHeight=estimateItemHeight
-    staticHeight=staticHeight
-    renderAll=renderAll as |item index|
+{{#vertical-collection
+  items
+  key=key
+  estimateHeight=estimateHeight
+  bufferSize=bufferSize
+  staticHeight=staticHeight
+  shouldRecycle=shouldRecycle
+  idForFirstItem=idForFirstItem
+  renderFromLast=renderFromLast
+  occlusionTagName=occlusionTagName
+  renderAll=renderAll
+  firstReached=firstReached
+  lastReached=lastReached
+  firstVisibleChanged=firstVisibleChanged
+  lastVisibleChanged=lastVisibleChanged
+  as |item index|
 }}
-  <div>
-    {{#drag-sort-item
-      additionalArgs                 = additionalArgs
-      item                           = item
-      index                          = index
-      items                          = items
-      group                          = group
-      handle                         = handle
-      class                          = childClass
-      tagName                        = childTagName
-      isHorizontal                   = isHorizontal
-      isRtl                          = isRtl
-      draggingEnabled                = draggingEnabled
-      dragEndAction                  = dragEndAction
-      determineForeignPositionAction = determineForeignPositionAction
-    }}
-      {{yield item index}}
-    {{/drag-sort-item}}
-  </div>
+  {{#drag-sort-item
+        additionalArgs                 = additionalArgs
+        item                           = item
+        index                          = index
+        items                          = items
+        group                          = group
+        handle                         = handle
+        class                          = childClass
+        tagName                        = childTagName
+        isHorizontal                   = isHorizontal
+        isRtl                          = isRtl
+        draggingEnabled                = draggingEnabled
+        dragEndAction                  = dragEndAction
+        determineForeignPositionAction = determineForeignPositionAction
+      }}
+    {{yield item index}}
+  {{/drag-sort-item}}
 {{/vertical-collection}}
