removed autoscroll and implemented on demand scroll API

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -432,24 +432,18 @@
             <button name="button" class="padding--8" {{action 'appendItems'}}>Add 5 Items</button>
             <button name="button" class="padding--8" {{action 'removeItems'}}>Remove 5 Items</button>
           </div>
-          <div>
-            <label for="autoscroll">
-              Enable Auto Scroll:
-            </label>
-            {{input type="checkbox" checked=autoScroll}} 
-          </div>
         </div>
 
         <p class="info">Occlusion will be activated when number of items exceed the above threshold value</p>
 
         {{#drag-sort-list
-          items               = items16
-          dragEndAction       = (action 'dragEnd')
-          lazyRenderEnabled   = true
-          autoScroll          = autoScroll
-          itemsThreshold      = itemsThreshold
-          estimateHeight      = 35
-          class               = "height--400"
+          items                   = items16
+          dragEndAction           = (action 'dragEnd')
+          lazyRenderEnabled       = true
+          itemsThreshold          = itemsThreshold
+          registerApi             = (action 'registerApi')
+          estimateHeight          = 35
+          class                   = "height--400"
           as |item|
         }}
           <div class="the-item">
