fixed occlusion package version

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -472,7 +472,7 @@
         <h4>List without occlusion render</h4>
 
         {{#drag-sort-list
-          items         = items15
+          items         = occlusion1
           handle        = '.handle'
           class         = "height--400"
           dragEndAction = (action 'dragEnd')
@@ -488,7 +488,7 @@
       <article class="list">
         <h4>List with Occlusion Rendering </h4>
         {{#drag-sort-list
-          items             = items15
+          items             = occlusion2
           dragEndAction     = (action 'dragEnd')
           lazyRenderEnabled = true
           class             = "height--400"
@@ -519,7 +519,7 @@
         <p class="info">Occlusion will be activated when number of items exceed the above threshold value</p>
 
         {{#drag-sort-list
-          items                   = items16
+          items                   = occulsion3
           dragEndAction           = (action 'dragEnd')
           lazyRenderEnabled       = true
           itemsThreshold          = itemsThreshold
