--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -36,6 +36,14 @@ h6:last-child
   height: 400px;
 }
 
+.height--100 {
+  height: 100px;
+}
+
+.height--200 {
+  height: 200px;
+}
+
 .padding--8 {
   padding: 8px;
 }
