Fixed nested drag sort with shouldRecycle=false

--- a/tests/dummy/app/templates/components/nested-item-occluded.hbs
+++ b/tests/dummy/app/templates/components/nested-item-occluded.hbs
@@ -8,6 +8,7 @@
   dragEndAction       = dragEndAction
   estimateHeight      = item.estimateHeight
   class               = item.class
+  shouldRecycle       = shouldRecycle
   as |child|
 }}
   {{nested-item-occluded
