--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -548,6 +548,7 @@
       item          = nestedItems2
       group         = "nested2"
       dragEndAction = (action "dragEnd")
+      shouldRecycle = false
     }}
 
     <p>Warning: Nested lists doesn't work well with horizontal lists.</p>
